--- a/AnperoFrontend/Views/Home/Index.cshtml
+++ b/AnperoFrontend/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
     ViewBag.Title = "Home Page";
+
+
 }
 <div class="container">
     <div class="service ">
@@ -53,129 +55,48 @@
                         <li class="active"><a data-toggle="tab" href="#tab-1">Bán chạy</a></li>
                         <li><a data-toggle="tab" href="#tab-2">Đang khuyến mãi</a></li>
                         <li><a data-toggle="tab" href="#tab-3">Hàng mới về</a></li>
-                    </ul>
+                    </ul>                
                     <div class="tab-container">
                         <div id="tab-1" class="tab-panel active">
-                            <ul class="product-list owl-carousel" data-dots="false" data-loop="true" data-nav="true" data-margin="30" data-autoplayTimeout="1000" data-autoplayHoverPause="true" data-responsive='{"0":{"items":1},"600":{"items":3},"1000":{"items":3}}'>
-                                <li>
-                                    <div class="left-block">
-                                        <a href="#">
-                                            <img class="img-responsive" alt="product" src="assets/data/bs1.jpg" />
-                                        </a>
-                                        <div class="quick-view">
-                                            <a title="Add to my wishlist" class="heart" href="#"></a>                                            
-                                            <a title="Quick view" class="search" href="#"></a>
+                            <ul class="product-list owl-carousel" data-dots="false" data-loop="true" data-nav="true" data-margin="30" data-autoplayTimeout="1000" data-autoplayHoverPause="true" data-responsive='{"0":{"items":1},"600":{"items":3},"1000":{"items":3}}'>                                
+                                @if (ViewData["sellingProduct"] != null)
+                                {
+                                   
+                                    <li>
+                                        <div class="left-block">
+                                            <a href="#">
+                                                <img class="img-responsive" alt="product" src="assets/data/bs1.jpg" />
+                                            </a>
+                                            <div class="quick-view">
+                                                <a title="Add to my wishlist" class="heart" href="#"></a>
+                                                <a title="Quick view" class="search" href="#"></a>
+                                            </div>
+                                            <div class="add-to-cart">
+                                                <a title="Add to Cart" href="#">Add to Cart</a>
+                                            </div>
+                                            <div class="group-price">
+                                                <span class="product-new">NEW</span>
+                                                <span class="product-sale">Sale</span>
+                                            </div>
                                         </div>
-                                        <div class="add-to-cart">
-                                            <a title="Add to Cart" href="#">Add to Cart</a>
+                                        <div class="right-block">
+                                            <h5 class="product-name"><a href="#">Sexy Lady</a></h5>
+                                            <div class="content_price">
+                                                <span class="price product-price">$38,95</span>
+                                                <span class="price old-price">$52,00</span>
+                                            </div>
+                                            <div class="product-star">
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star-half-o"></i>
+                                            </div>
                                         </div>
-                                        <div class="group-price">
-                                            <span class="product-new">NEW</span>
-                                            <span class="product-sale">Sale</span>
-                                        </div>
-                                    </div>
-                                    <div class="right-block">
-                                        <h5 class="product-name"><a href="#">Sexy Lady</a></h5>
-                                        <div class="content_price">
-                                            <span class="price product-price">$38,95</span>
-                                            <span class="price old-price">$52,00</span>
-                                        </div>
-                                        <div class="product-star">
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star-half-o"></i>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="left-block">
-                                        <a href="#"><img class="img-responsive" alt="product" src="assets/data/bs2.jpg" /></a>
-                                        <div class="quick-view">
-                                            <a title="Add to my wishlist" class="heart" href="#"></a>
-                                            <a title="Add to compare" class="compare" href="#"></a>
-                                            <a title="Quick view" class="search" href="#"></a>
-                                        </div>
-                                        <div class="add-to-cart">
-                                            <a title="Add to Cart" href="#">Add to Cart</a>
-                                        </div>
-                                    </div>
-                                    <div class="right-block">
-                                        <h5 class="product-name"><a href="#">Perfect Dress</a></h5>
-                                        <div class="content_price">
-                                            <span class="price product-price">$38,95</span>
-                                            <span class="price old-price">$52,00</span>
-                                        </div>
-                                        <div class="product-star">
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star-half-o"></i>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="left-block">
-                                        <a href="#"><img class="img-responsive" alt="product" src="assets/data/bs3.jpg" /></a>
-                                        <div class="quick-view">
-                                            <a title="Add to my wishlist" class="heart" href="#"></a>
-                                            <a title="Add to compare" class="compare" href="#"></a>
-                                            <a title="Quick view" class="search" href="#"></a>
-                                        </div>
-                                        <div class="add-to-cart">
-                                            <a title="Add to Cart" href="#">Add to Cart</a>
-                                        </div>
-                                    </div>
-                                    <div class="group-price">
-                                        <span class="product-new">NEW</span>
-                                    </div>
-                                    <div class="right-block">
-                                        <h5 class="product-name"><a href="#">Fresh Summer</a></h5>
-                                        <div class="content_price">
-                                            <span class="price product-price">$38,95</span>
-                                            <span class="price old-price">$52,00</span>
-                                        </div>
-                                        <div class="product-star">
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star-half-o"></i>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="left-block">
-                                        <a href="#"><img class="img-responsive" alt="product" src="assets/data/bs3.jpg" /></a>
-                                        <div class="quick-view">
-                                            <a title="Add to my wishlist" class="heart" href="#"></a>
-                                            <a title="Add to compare" class="compare" href="#"></a>
-                                            <a title="Quick view" class="search" href="#"></a>
-                                        </div>
-                                        <div class="add-to-cart">
-                                            <a title="Add to Cart" href="#">Add to Cart</a>
-                                        </div>
-                                    </div>
-                                    <div class="group-price">
-                                        <span class="product-new">NEW</span>
-                                    </div>
-                                    <div class="right-block">
-                                        <h5 class="product-name"><a href="#">Fresh Summer</a></h5>
-                                        <div class="content_price">
-                                            <span class="price product-price">$38,95</span>
-                                            <span class="price old-price">$52,00</span>
-                                        </div>
-                                        <div class="product-star">
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star-half-o"></i>
-                                        </div>
-                                    </div>
-                                </li>
+                                    </li>
+                                }
+                                
+                             
                             </ul>
                         </div>
                         <div id="tab-2" class="tab-panel">
