--- a/AnperoFrontend/Views/Shared/_Layout.cshtml
+++ b/AnperoFrontend/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <title>@ViewBag.Title</title>
-
+    @RenderSection("health", required: false)
     @Styles.Render("~/Content/css")
     <link rel="stylesheet" type="text/css" href="/assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
