add product category view

--- a/AnperoFrontend/assets/css/style.css
+++ b/AnperoFrontend/assets/css/style.css
@@ -1862,7 +1862,8 @@ span.notify-right{
 }
 
 .popular-tabs .product-list li .left-block{
-    
+    min-height:317px;
+    overflow:hidden;
 }
 .popular-tabs .product-list li{
       border: 1px solid #eaeaea;
