--- a/AnperoFrontend/Views/Home/Index.cshtml
+++ b/AnperoFrontend/Views/Home/Index.cshtml
@@ -72,7 +72,7 @@
                                                                 @if (item.Rank > 1)
                                                                 {
                                                                     <div class="featured-text"><span>Bán chạy</span></div>
-                                                               }
+                                                                }
                                                             </a>
                                                             <div class="quick-view">
                                                                 <a title="Chi tiết sản phẩm" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)"></a>
@@ -81,7 +81,7 @@
                                                                 <a title="Add to Cart" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">Thêm vào giỏ hàng</a>
                                                             </div>
                                                             <div class="group-price">
-                                                                <span class="product-new">NEW</span>
+                                                                <span class="product-new">Mới</span>
                                                                 @if (item.IsSale)
                                                                 {
                                                                     <span class="product-sale">Giá tốt</span>
@@ -106,12 +106,7 @@
                                                     </li>
                                                 }
                                             }
-
-
-
                                         }
-
-
                                     </ul>
                                 </div>
                                 <div id="tab-2" class="tab-panel">
