--- a/AnperoFrontend/Views/Shared/_Layout.cshtml
+++ b/AnperoFrontend/Views/Shared/_Layout.cshtml
@@ -78,8 +78,7 @@
                             <button type="submit" class="pull-right btn-search" id="btnSearch"></button>
                         </form>
                     </div>
-                    <div class="col-xs-5 col-sm-3 col-md-2 group-button-header">
-                        <a title="Compare" href="#" class="btn-compare">compare</a>
+                    <div class="col-xs-5 col-sm-3 col-md-2 group-button-header">                        
                         <a target="_blank" title="Chia sẻ trên google+" href="https://plus.google.com/share?url=@HttpContext.Current.Request.Url.AbsoluteUri" class="btn-heart">wishlist</a>
                         <div class="btn-cart" id="cart-block">
                             <a title="My cart" href="cart.html">Cart</a>
@@ -183,7 +182,7 @@
 
                                         </ul>
                                         <ul class="nav navbar-nav navbar-right">
-                                            <li><a class="link-buytheme" href="/"><i class="fa fa-angle-double-right"></i> Buy This Template</a></li>
+                                            <li><a class="link-buytheme" href="tel:@commonInfo.HotLine"><i class="fa fa-angle-double-right"></i> Click để đặt hàng @commonInfo.HotLine</a></li>
                                         </ul>
                                     </div><!--/.nav-collapse -->
                                 </div>
