--- a/AnperoFrontend/Views/Shared/product/_MenuAndAdsPartial.cshtml
+++ b/AnperoFrontend/Views/Shared/product/_MenuAndAdsPartial.cshtml
@@ -40,18 +40,19 @@
         <div class="block left-module">
             <p class="title_block">Đang giảm giá</p>
             <div class="block_content product-onsale">
-                <ul class="product-list owl-carousel" data-loop="true" data-nav="false" data-margin="0" data-autoplayTimeout="1000" data-autoplayHoverPause="true" data-items="1" data-autoplay="true">
-                    @{
-                        AnperoFrontend.WebService.ProductItem[] saleProduct = (AnperoFrontend.WebService.ProductItem[])ViewData["saleProduct"];
-                        if (saleProduct != null && saleProduct.Length > 0)
-                        {
-                            foreach (var item in saleProduct)
+
+                @{
+                    AnperoFrontend.WebService.ProductItem[] saleProduct = (AnperoFrontend.WebService.ProductItem[])ViewData["saleProduct"];
+                    if (saleProduct != null && saleProduct.Length > 1)
+                    {
+                        <ul class="product-list owl-carousel" data-loop="true" data-nav="false" data-margin="0" data-autoplayTimeout="1000" data-autoplayHoverPause="true" data-items="1" data-autoplay="true">
+                            @foreach (var item in saleProduct)
                             {
                                 <li>
                                     <div class="product-container">
                                         <div class="left-block">
                                             <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)">
-                                                <img class="img-responsive" alt="product" src="assets/data/product-260x317.jpg" />
+                                                <img class="img-responsive" alt="product" src="@saleProduct[0].Images" />
                                             </a>
                                             <div class="price-percent-reduction2">giảm @Anpero.StringHelpper.ConVertToMoneyFormatInt((item.Price - item.SalePrice).ToString())</div>
                                         </div>
@@ -64,108 +65,160 @@
                                             </div>
                                         </div>
                                         <div class="product-bottom">
-                                            <a class="btn-add-cart" title="Add to Cart" href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)">Add to Cart</a>
+                                            <a class="btn-add-cart" title="Add to Cart" href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)">Thêm vào giỏ hàng</a>
                                         </div>
                                     </div>
                                 </li>
-                              
                             }
-                        }
+                        </ul>
                     }
-                </ul>
+                    else if (saleProduct != null && saleProduct.Length == 1)
+                    {
+                        <ul class="product-list">
+                            <li>
+                                <div class="product-container">
+                                    <div class="left-block">
+                                        <a href="@Anpero.StringHelpper.GetProductLink(saleProduct[0].PrName, saleProduct[0].Id)">
+                                            <img class="img-responsive" alt="product" src="@saleProduct[0].Images" />
+                                        </a>
+                                        <div class="price-percent-reduction2">giảm @Anpero.StringHelpper.ConVertToMoneyFormatInt((saleProduct[0].Price - saleProduct[0].SalePrice).ToString())</div>
+                                    </div>
+                                    <div class="right-block">
+                                        <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(saleProduct[0].PrName, saleProduct[0].Id)">@saleProduct[0].PrName</a></h5>
+
+                                        <div class="content_price">
+                                            <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(saleProduct[0].SalePrice.ToString()) đ</span>
+                                            <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(saleProduct[0].Price.ToString()) đ</span>
+                                        </div>
+                                    </div>
+                                    <div class="product-bottom">
+                                        <a class="btn-add-cart" title="Add to Cart" href="@Anpero.StringHelpper.GetProductLink(saleProduct[0].PrName, saleProduct[0].Id)">Thêm vào giỏ hàng</a>
+                                    </div>
+                                </div>
+                            </li>
+
+                        </ul>
+
+                    }
+
+                }
+
+
 
             </div>
         </div>
-}
-    <!-- ./block best sellers  -->
-    @*<!-- block best sellers -->
-        <div class="block left-module">
-            <p class="title_block">Bán chạy</p>
-            <div class="block_content">
-                <div class="owl-carousel owl-best-sell" data-loop="true" data-nav="false" data-margin="0" data-autoplayTimeout="1000" data-autoplay="true" data-autoplayHoverPause="true" data-items="1">
-                    <ul class="products-block best-sell">
-                        <li>
-                            <div class="products-block-left">
-                                <a href="@item.Images">
-                                    <img src="@item.Images" alt="@item.PrName">
-                                </a>
-                            </div>
-                            <div class="products-block-right">
-                                <p class="product-name">
-                                    <a href="#">@item.PrName</a>
-                                </p>
-                                <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString())</p>
+                    }
+    @if (ViewData["BestsaleProduct"] != null)
+    {
+        AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["BestsaleProduct"];
+        if (bestSaleList != null && bestSaleList.ResultCount > 3 && bestSaleList.Item.Length > 0)
+        {
+            <div class="block left-module">
+                <p class="title_block">Bán chạy</p>
+                <div class="block_content">
+                    <div class="owl-carousel owl-best-sell" data-loop="true" data-nav="false" data-margin="0" data-autoplayTimeout="1000" data-autoplay="true" data-autoplayHoverPause="true" data-items="1">
 
-                            </div>
-                        </li>
-
-                    </ul>
-                    <ul class="products-block best-sell">
-                        <li>
-                            <div class="products-block-left">
-                                <a href="#">
-                                    <img src="assets/data/p13.jpg" alt="SPECIAL PRODUCTS">
-                                </a>
-                            </div>
-                            <div class="products-block-right">
-                                <p class="product-name">
-                                    <a href="#">Woman Within Plus Size Flared</a>
-                                </p>
-                                <p class="product-price">$38,95</p>
-                                <p class="product-star">
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star-half-o"></i>
-                                </p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="products-block-left">
-                                <a href="#">
-                                    <img src="assets/data/p14.jpg" alt="SPECIAL PRODUCTS">
-                                </a>
-                            </div>
-                            <div class="products-block-right">
-                                <p class="product-name">
-                                    <a href="#">Woman Within Plus Size Flared</a>
-                                </p>
-                                <p class="product-price">$38,95</p>
-                                <p class="product-star">
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star-half-o"></i>
-                                </p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="products-block-left">
-                                <a href="#">
-                                    <img src="assets/data/p15.jpg" alt="SPECIAL PRODUCTS">
-                                </a>
-                            </div>
-                            <div class="products-block-right">
-                                <p class="product-name">
-                                    <a href="#">Plus Size Rock Star Skirt</a>
-                                </p>
-                                <p class="product-price">$38,95</p>
-                                <p class="product-star">
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star-half-o"></i>
-                                </p>
-                            </div>
-                        </li>
-                    </ul>
+                        <ul class="products-block best-sell">
+                            @for (int i = 0; i < 3; i++)
+                            {
+                                <li>
+                                    <div class="products-block-left">
+                                        <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">
+                                            <img src="@bestSaleList.Item[i].Images" alt="@bestSaleList.Item[i].PrName">
+                                        </a>
+                                    </div>
+                                    <div class="products-block-right">
+                                        <p class="product-name">
+                                            <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">@bestSaleList.Item[i].PrName</a>
+                                        </p>
+                                        @if (bestSaleList.Item[i].IsSale)
+                                        {
+                                            
+                                            <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].SalePrice.ToString())</p>
+                                            <p class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString())</p>
+                                        }
+                                        else
+                                        {
+                                            <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString())</p>
+                                        }
+                                        
+                                        <p class="product-star">
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star-half-o"></i>
+                                        </p>
+                                    </div>
+                                </li>
+                            }
+                        </ul>
+                        <ul class="products-block best-sell">
+                            @for (int i = 3; i < bestSaleList.Item.Length; i++)
+                            {
+                                <li>
+                                    <div class="products-block-left">
+                                        <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">
+                                            <img src="@bestSaleList.Item[i].Images" alt="@bestSaleList.Item[i].PrName">
+                                        </a>
+                                    </div>
+                                    <div class="products-block-right">
+                                        <p class="product-name">
+                                            <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">@bestSaleList.Item[i].PrName</a>
+                                        </p>
+                                        <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString())</p>
+                                        <p class="product-star">
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star-half-o"></i>
+                                        </p>
+                                    </div>
+                                </li>
+                            }
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-        <!-- ./block best sellers  -->*@
-
+        }
+        else if (bestSaleList != null && bestSaleList.ResultCount <= 3)
+        {
+            <div class="block left-module">
+                <p class="title_block">Bán chạy</p>
+                <div class="block_content">
+                    <div class="owl-best-sell">
+                        <ul class="products-block best-sell">
+                            @for (int i = 0; i < bestSaleList.Item.Length; i++)
+                            {
+                                <li>
+                                    <div class="products-block-left">
+                                        <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">
+                                            <img src="@bestSaleList.Item[i].Images" alt="@bestSaleList.Item[i].PrName">
+                                        </a>
+                                    </div>
+                                    <div class="products-block-right">
+                                        <p class="product-name">
+                                            <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">@bestSaleList.Item[i].PrName</a>
+                                        </p>
+                                        <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString())</p>
+                                        <p class="product-star">
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star-half-o"></i>
+                                        </p>
+                                    </div>
+                                </li>
+                            }
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        }
+    }
+    <!-- block best sellers -->
 
 </div>
+
